--- a/hello-world.html
+++ b/hello-world.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Arnold</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="CSS/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1> My first web page</h1>
