added 3 css containers

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -24,6 +24,7 @@
                 <p>I'm Arnoldblair Munene</p>
                 <p>I'm a software developer</p>
                 <button class="hire-btn">Hire me</button>
+                <button class="down-cv">Download CV</button>
         </section>
     </body>
 
