added some css styling

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -25,6 +25,7 @@
                 <p>I'm a software developer</p>
                 <button class="hire-btn">Hire me</button>
                 <button class="down-cv">Download CV</button>
+                </div>
         </section>
     </body>
 
