styled an image using class

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -26,6 +26,9 @@
                 <button class="hire-btn">Hire me</button>
                 <button class="down-cv">Download CV</button>
                 </div>
+                <!--model------------->
+                <img src="images/blair.jpg" class="blair" alt="my image"
+
         </section>
     </body>
 
