added an about me section

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>MY PORTFOLIO</title>
-        <link rel="stylesheet" type="text/css" href="css/styles.css"
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <section>
@@ -27,9 +27,26 @@
                 <button class="down-cv">Download CV</button>
                 </div>
                 <!--model------------->
-                <img src="images/blair.jpg" class="blair" alt="my image"
+                <img src="images/blair.jpg" class="blair" alt="my image">
 
         </section>
+
+        <!--about section------------>
+        <div class="about-container">
+            <!--image-------------->
+            <img src="images/blair.jpg">
+
+            <!--about-text--------------->
+            <div class="about-text">
+                <p>About me</p>
+                <p>Am a developer and designer</p>
+                <p>I undertook a bachelors degree in Information Technology at the University of Embu.I decided to take programming because I have a passion for tech, creativity, and finding solutions. I love the mental challenge that programming presents and the possibility of being able to conceive a new idea and bring it to fruition</p>
+                <!---button------->
+                <button>Hire Me</button>
+                <button>Download Cv</button>
+            </div>
+
+        </div>
     </body>
 
 </html>
