added the projects section

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -47,6 +47,14 @@
             </div>
 
         </div>
+        <!--list of projects--------->
+        <div class="my projects">
+            <!---text------->
+            <div class="my projects-text"
+            <p>Projects</p>
+            <p>Created a pet adoption webpage</p>
+            <p>Created an online voting system</p>
+        </div>
     </body>
 
 </html>
