added a box-container

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -48,9 +48,9 @@
 
         </div>
         <!--list of projects--------->
-        <div class="my projects">
+        <div class="projects">
             <!---text------->
-            <div class="my projects-text"
+            <div class="projects-text"
             <p>Projects</p>
             <p>Created a pet adoption webpage</p>
             <p>Created an online voting system</p>
