--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -55,17 +55,12 @@
             <p>Created a pet adoption webpage</p>
             <p>Created an online voting system</p>
         </div>
-        <!--box--------------->
-        <div class="box-container">
-            <!--1--------------------->
-            <div class="box-1"></div>
-            <!--2------------------------>
-            <div class="box-2"></div>
-            <!--3-------------------------->
-            <div class="box-3"></div>
-
-
-        </div>
+     </div>
+     <!---contact me--------------------------->
+     <div class="Contact-me">
+         <p>If you have any project in mind</p>
+         <button>Contact Me</button>
+     </div>
     </body>
 
 </html>
