added a link to my project

--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">About</a></li>
+                    <li><a href="#">Project</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Team</a></li>
                 </ul>
             </nav>
             <!--text-------------->
@@ -50,10 +50,12 @@
         <!--list of projects--------->
         <div class="projects">
             <!---text------->
-            <div class="projects-text"
-            <p>Projects</p>
-            <p>Created a pet adoption webpage</p>
-            <p>Created an online voting system</p>
+            <div class="projects-text">
+            <p><strong>projects</strong></p>
+            <p>This is my first project.It is a very simple project done using HTML and CSS.</p>
+            <p>The project is about a portfolio landing page.</p>
+            <a href="https://github.com/Arnoldblair/DayoneMoringa.git">View my project</a> 
+            
         </div>
      </div>
      <!---contact me--------------------------->
@@ -61,6 +63,7 @@
          <p>If you have any project in mind</p>
          <button>Contact Me</button>
      </div>
+     
     </body>
 
 </html>
