--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -51,7 +51,7 @@
         <div class="projects">
             <!---text------->
             <div class="projects-text">
-            <p><strong>projects</strong></p>
+            <p><strong>Projects</strong></p>
             <p>This is my first project.It is a very simple project done using HTML and CSS.</p>
             <p>The project is about a portfolio landing page.</p>
             <a href="https://github.com/Arnoldblair/DayoneMoringa.git">View my project</a> 
