--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -54,7 +54,7 @@
             <p><strong>Projects</strong></p>
             <p>This is my first project.It is a very simple project done using HTML and CSS.</p>
             <p>The project is about a portfolio landing page.</p>
-            <a href="https://github.com/Arnoldblair/DayoneMoringa.git">View my project</a> 
+            <a href="http://127.0.0.1:5500/my%20portfolio/index.html">View my project</a> 
             
         </div>
      </div>
